@@ -1,5 +1,5 @@
 <option type="enum" id="opt/GS-HalftoningAlgorithm-Gray">
-  <!-- A multilingual <comments> block can appear here, too;
+      <!-- A multilingual <comments> block can appear here, too;
        it should be treated as documentation for the user. -->
   <arg_longname>
    <en>Halftoning Algorithm</en>
@@ -67,31 +67,31 @@
      </constraint>
      <constraint sense="true">
       <driver>gdi</driver>
-      <arg_defval>ev/GS-ScreeningType-Standard</arg_defval>
+      <arg_defval>ev/GS-HalftoningAlgorithm-Gray-Standard</arg_defval>
      </constraint>
      <constraint sense="true">
       <driver>hl1240</driver>
-      <arg_defval>ev/GS-ScreeningType-Standard</arg_defval>
+      <arg_defval>ev/GS-HalftoningAlgorithm-Gray-Standard</arg_defval>
      </constraint>
      <constraint sense="true">
       <driver>hl1250</driver>
-      <arg_defval>ev/GS-ScreeningType-Standard</arg_defval>
+      <arg_defval>ev/GS-HalftoningAlgorithm-Gray-Standard</arg_defval>
      </constraint>
      <constraint sense="true">
       <driver>hl7x0</driver>
-      <arg_defval>ev/GS-ScreeningType-Standard</arg_defval>
+      <arg_defval>ev/GS-HalftoningAlgorithm-Gray-Standard</arg_defval>
      </constraint>
      <constraint sense="true">
       <driver>oki4w</driver>
-      <arg_defval>ev/GS-ScreeningType-Standard</arg_defval>
+      <arg_defval>ev/GS-HalftoningAlgorithm-Gray-Standard</arg_defval>
      </constraint>
      <constraint sense="true">
       <driver>coslw2p</driver>
-      <arg_defval>ev/GS-ScreeningType-Standard</arg_defval>
+      <arg_defval>ev/GS-HalftoningAlgorithm-Gray-Standard</arg_defval>
      </constraint>
      <constraint sense="true">
       <driver>coslwxl</driver>
-      <arg_defval>ev/GS-ScreeningType-Standard</arg_defval>
+      <arg_defval>ev/GS-HalftoningAlgorithm-Gray-Standard</arg_defval>
      </constraint>
   </constraints>
   <enum_vals>
