@@ -1,3 +1,8 @@
+2008-02-11  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* opt/GS-HalftoningAlgorithm-Gray.xml: Fixed default setting for
+	  some drivers (Ubuntu bug LP: #25105).
+	
 2007-12-31  John Hosszu <john.hosszu@hp.com>
 
 	* printer/: Added
@@ -8,7 +13,6 @@
 	* PPD/: Added
           HP-LaserJet_M2727_MFP.ppd
           HP-LaserJet_9040.ppd
-
 
 2007-12-17  George Liu <george.liu@ricoh-tech.com>
 
